[gd_scene load_steps=15 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/35 sin título_20220619004542.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Interfaces/PopUPS/menu/pop_up_select_level.gd" type="Script" id=2]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Pausa/43 sin título_20220630110745.png" type="Texture" id=3]
[ext_resource path="res://Main Resources/Sprites/otros/progress_bars/53 sin título_20220707213418.png" type="Texture" id=4]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Main Resources/Sprites/otros/progress_bars/53 sin título_20220707213525.png" type="Texture" id=6]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/54 sin título.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=122]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=124]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.225313, 1 ),
"update": 0,
"values": [ Vector2( 145, 66 ), Vector2( 139, 60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.225313, 0.329877 ),
"update": 0,
"values": [ Vector2( 117, 117 ), Vector2( 130, 130 ) ]
}

[sub_resource type="Animation" id=130]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.138696, 0.183011 ),
"update": 0,
"values": [ Vector2( 20, 20 ), Vector2( 28, 28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.138696, 0.183011 ),
"update": 0,
"values": [ Vector2( 396, -6 ), Vector2( 391, -10 ) ]
}

[sub_resource type="DynamicFont" id=126]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=127]

[sub_resource type="StyleBoxEmpty" id=128]

[sub_resource type="Animation" id=123]
resource_name = "appear"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../background:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.329877 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.509804 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tittle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.194, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:X")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.19, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("window:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.0507658 ),
"update": 0,
"values": [ Vector2( 194, 119 ), Vector2( 3.05176e-05, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("window:rect_size")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.0507658 ),
"update": 0,
"values": [ Vector2( 20, 12 ), Vector2( 408, 250 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("continue:visible")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.188, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("progreso:visible")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.188, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("info:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.191, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[node name="pop_up_select_level" type="CanvasLayer"]
layer = 6
script = ExtResource( 2 )
X = true

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_lock_": true
}

[node name="option" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -125.0
margin_right = 204.0
margin_bottom = 125.0
__meta__ = {
"_edit_lock_": true
}

[node name="window" type="TextureRect" parent="option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -125.0
margin_right = 204.0
margin_bottom = 125.0
texture = ExtResource( 1 )
expand = true

[node name="tittle" type="Label" parent="option"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 16.0
margin_right = 147.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_fonts/font = SubResource( 122 )
text = "aaaa"
align = 1
valign = 1
clip_text = true

[node name="continue" type="TextureButton" parent="option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -59.0
margin_right = 58.0
margin_bottom = 58.0
texture_normal = ExtResource( 3 )
expand = true

[node name="anim" type="AnimationPlayer" parent="option/continue"]
anims/focus = SubResource( 124 )

[node name="info" type="TextureButton" parent="option"]
margin_left = 396.0
margin_top = -6.0
margin_right = 416.0
margin_bottom = 14.0
texture_normal = ExtResource( 7 )
expand = true

[node name="anim" type="AnimationPlayer" parent="option/info"]
anims/focus = SubResource( 130 )

[node name="progreso" type="TextureProgress" parent="option"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -141.0
margin_top = -43.0
margin_right = 141.0
margin_bottom = -24.0
step = 0.01
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )

[node name="percent" type="ProgressBar" parent="option/progreso"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -8.0
margin_right = 26.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 126 )
custom_styles/fg = SubResource( 127 )
custom_styles/bg = SubResource( 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="option"]
autoplay = "appear"
anims/appear = SubResource( 123 )

[connection signal="focus_entered" from="option/continue" to="." method="_on_continue_focus_entered"]
[connection signal="focus_exited" from="option/continue" to="." method="_on_continue_focus_exited"]
[connection signal="pressed" from="option/continue" to="." method="_on_continue_pressed"]
[connection signal="focus_entered" from="option/info" to="." method="_on_info_focus_entered"]
[connection signal="focus_exited" from="option/info" to="." method="_on_info_focus_exited"]
[connection signal="pressed" from="option/info" to="." method="_on_info_pressed"]
